--- a/home/index.html
+++ b/home/index.html
@@ -12,13 +12,16 @@
         <div class="home-card">
             <h1>Página de Inventario</h1>
             <div class="button-group-row">
-                <button class="btn-green">Agregar Producto</button>
+                <button class="btn-green">Agregar Producto Nuevo</button>
                 <button class="btn-blue">Venta</button>
                 <button class="btn-red">Eliminar Producto</button>
             </div>            
             <div class="inventory-list" id="inventory-list">
                 <!-- Aquí se mostrarán las tarjetas de los productos -->
-            </div>
+            </div>                        
+        </div>
+        <div className="logout-container">
+            <!-- Aquí se insertará el botón de cerrar sesión -->
         </div>
     </div>
 
