--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
                 <div class="input-group">
                     <input type="password" id="password" placeholder="Contraseña" required>
                 </div>
+                <!-- Checkbox para "Recordar sesión" -->
+                <div class="input-group">
+                    <label>
+                        <input type="checkbox" id="remember-me"> Recordar sesión
+                    </label>
+                </div>
                 <button type="submit" class="btn">Iniciar Sesión</button>
                 <p id="error-message"></p>
             </form>
