--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <input type="password" id="password" placeholder="Contraseña" required>
                 </div>
                 <!-- Checkbox para "Recordar sesión" -->
-                <div class="input-group">
+                <div class="input-group" id="remember-me-group">
                     <label>
                         <input type="checkbox" id="remember-me"> Recordar sesión
                     </label>
