--- a/add-product/index.html
+++ b/add-product/index.html
@@ -18,7 +18,7 @@
                 <label for="product-image">URL de Imagen</label>
                 <input type="url" id="product-image" required>
             
-                <label for="purchase-price">Precio de Compra Por Unidad</label>
+                <label for="purchase-price">Precio de Compra</label>
                 <input type="number" id="purchase-price" step="0.01" required>
             
                 <label for="sale-price">Precio de Venta</label>
